--- a/tests/integration/targets/cleanup/tasks/cleanup_instance.yml
+++ b/tests/integration/targets/cleanup/tasks/cleanup_instance.yml
@@ -8,6 +8,10 @@
   register: res
   no_log: true
 
+- name: Found resources
+  debug:
+    var: res.json
+
 - name: Remove all instances created by this test run
   uri:
     url: "{{ vultr_api_url }}/instances/{{ item.id }}"
