--- a/tests/integration/targets/cleanup/tasks/cleanup_firewall_group.yml
+++ b/tests/integration/targets/cleanup/tasks/cleanup_firewall_group.yml
@@ -8,6 +8,10 @@
   register: res
   no_log: true
 
+- name: Found resources
+  debug:
+    var: res.json
+
 - name: Remove all firewall groups created by this test run
   uri:
     url: "{{ vultr_api_url }}/firewalls/{{ item.id }}"
