--- a/tests/integration/targets/cleanup/tasks/cleanup_reserved_ip.yml
+++ b/tests/integration/targets/cleanup/tasks/cleanup_reserved_ip.yml
@@ -8,6 +8,10 @@
   register: res
   no_log: true
 
+- name: Found resources
+  debug:
+    var: res.json
+
 - name: Remove all reserved-ips created by this test run
   uri:
     url: "{{ vultr_api_url }}/reserved-ips/{{ item.id }}"
