--- a/tests/integration/targets/cleanup/tasks/cleanup_ssh_key.yml
+++ b/tests/integration/targets/cleanup/tasks/cleanup_ssh_key.yml
@@ -8,6 +8,10 @@
   register: res
   no_log: true
 
+- name: Found resources
+  debug:
+    var: res.json
+
 - name: Remove all ssh-keys created by this test run
   uri:
     url: "{{ vultr_api_url }}/ssh-keys/{{ item.id }}"
