--- a/tests/integration/targets/network_info/defaults/main.yml
+++ b/tests/integration/targets/network_info/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
-vultr_network_name: "{{ vultr_resource_prefix }}_network"
-vultr_network_cidr: 192.168.42.0/24
-vultr_network_region: New Jersey
+vultr_network_description: "{{ vultr_resource_prefix }}_network"
+vultr_network_v4_subnet: 192.168.42.0
+vultr_network_v4_subnet_mask: 24
+vultr_network_region: ewr
