--- a/tests/integration/targets/startup_script_info/tasks/tests.yml
+++ b/tests/integration/targets/startup_script_info/tasks/tests.yml
@@ -5,7 +5,7 @@
   vultr.cloud.startup_script_info:
 
 - name: Create the script
-  vultr.cloud.startup_script_info:
+  vultr.cloud.startup_script:
     name: "{{ startup_script_name }}"
     script_type: "{{ startup_script_type }}"
     script: "{{ startup_script_content }}"
@@ -30,6 +30,6 @@
       - result.vultr_startup_script_info|selectattr('name','equalto','{{ startup_script_name }}') | list | count == 1
 
 - name: Delete the script
-  vultr_startup_script:
+  vultr.cloud.startup_script:
     name: "{{ startup_script_name }}"
     state: absent
